[project]
name = "wm1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=5.0.0",
    "hf-transfer>=0.1.9",
    "huggingface-hub[cli]>=1.19.0",
    "ipykernel>=7.3.0",
    "matplotlib>=3.11.0",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
]
